--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json?h=e5aee55df2871b75a79f92e2206b007b" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=6bf7838f7976599348d6d6c6402ca47f">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=dece270c0505fd51a70de7c25fb71b39">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=e61aba5a56369b8fb13f755a36350339">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=e03d0fb646fcf1c2340ca4e185518652">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=c79f051ba28e18f7c0c05abd75912cad">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
@@ -109,7 +109,7 @@
     Server --> Client: Response
 @enduml</textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end custom" style="padding: 20px;margin: 0 12px;margin-bottom: 24px;border-radius: 20px;border: 2px solid var(--bs-body-color);">
-                    <div class="d-flex justify-content-center align-items-center" style="padding: 20px;border-radius: 20px;background: white;width: 100%;height: 300px;"><img id="img-uml" class="none" style="width: 100%;height: 300px;object-fit: contain;object-position: center;background-repeat: no-repeat;" src="assets/img/example.png?h=920c35cef6ae2c4a33a11d4919eed56e">
+                    <div class="d-flex justify-content-center align-items-center" style="padding: 20px;border-radius: 20px;background: white;width: 100%;height: 100%;"><img id="img-uml" class="none" style="width: 100%;height: 300px;object-fit: contain;object-position: center;background-repeat: no-repeat;" src="assets/img/example.png?h=920c35cef6ae2c4a33a11d4919eed56e">
                         <div class="d-flex justify-content-center align-items-center" style="position: absolute;height: 300px;width: 224px;"><div id="loader-img-uml">
     <svg class="circle-outer" viewBox="0 0 86 86">
         <circle class="back" cx="43" cy="43" r="40"></circle>
